
- new shader based inserts/lights/bulbs
- new shader based mesh ball
- new shader based materials/lighting
  
  -> due to the new lighting and materials the orientation of vertex normals on imported primitives is now extremely important!
     to test if everything is correct, try to tone down the environment emission scale and see if your objects are correctly lit from above

- internal DMD (access via script, input levels are 0..100)
  to display the DMD, use a TextBox with the magic keyword "DMD" as text
  to be able to connect to VPM, use a recent VPM and also core.vbs and follow the instructions there
- DMDWidth, DMDHeight, DMDPixels added to Table Script methods

- improved smoothness for ramps (centripetal Catmull-Rom splines)
- changed opacity/transparency handling for ramps (Alpha/Acrylic have been deleted, so use the material opacity value now)

- GetElement, GetElementByName, GetBalls added to Table Script methods to have simple access to the elements and all active balls on the table
- renaming of IsVisible properties (flasher, ramp) to Visible

- Flasher supports custom shapes and multi texturing. You can define two separate images and define a filter to blend these two images.
  look into the CommandReference.txt for additional changes to the functions that can be used

- support primitive vertex sizes > 65535

- new external audio library for music playback (BASS)

- 64bit port (handle with care, might still cause issues)

- script editor updated to use latest scintilla (3.5.2)

- DirectX 8 port for input handling (currently disabled)

- texture size limit/downscale now respects aspect ratio (currently disabled)

- technical note: make sure to install Microsoft SDK 5.0,7.0A,7.1 or 7.1A, if you compile VP and get missing header errors (optionally set the include path inc\winsdk)

VP 9.9.1 Changelog
------------------------
- fixed some memory leaks

- fixed rendering of overlapping balls
